# sentinel_vault

./: .gitignore  Anchor.toml  package-lock.json  package.json  tsconfig.json
app/: next.config.js  package.json  tailwind.config.js  vercel.json
app/.github/workflows/: deploy.yml
app/src/app/: globals.css  icon.tsx  layout.tsx  opengraph-image.tsx  page.tsx  providers.tsx
app/src/components/: Toast.tsx  WalletButton.tsx  icons.tsx
app/src/hooks/: useVault.ts
app/src/idl/: sentinel_vault.json
app/src/utils/: program.ts
programs/sentinel_vault/: Cargo.toml
programs/sentinel_vault/src/: lib.rs
scripts/: create_ata.ts  create_pda_ata.ts  init_vault.js  init_vault.ts
temp_init/: init.js  package-lock.json  package.json
tests/: initialize.ts  sentinel_vault.ts
