[package]
name = "sentinel_vault"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sentinel_vault"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
solana-program = "=1.18.26"
borsh = "=1.5.1"
getrandom = { version = "=0.2.15", features = ["custom"] }
ahash = "=0.8.11"
blake3 = { version = "=1.5.1", features = ["digest"] }
proc-macro-crate = "=3.1.0"
indexmap = "=2.2.6"
